--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head></head>
-    <body></body>
+    <body>
+      
+      <!--this is a comment! -->
+      
+    </body>
   
   </html>
