Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
-  <head></head>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css"><Title>This is a lab</Title>
+  </head>
     <body>
       
       <!--this is a comment! -->
