Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
+  <Title>This is a lab</Title>
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css"><Title>This is a lab</Title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
     <body>
       
