Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
-  <Title>This is a lab</Title>
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">  
+    <title>This is a lab</title>
   </head>
     <body>
       
