--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<!-- Write your HTML in this file -->
-
+<!doctype html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">  
+    <title>This is a lab</title>
+  </head>
+    <body>
+      
+      <!--this is a comment! -->
+      
+    </body>
+  
+  </html>
